# htmx-mcp

./: .gitignore  README.md  pyproject.toml  pytest.toml
src/mcp_htmx/: __init__.py  main.py
tests/: __init__.py  test_package.py
